--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <h2>Привет!!!</h2>
    <h1>Сам Привет</h1>
-    
+    <code>
+        Однажды, в студеную, зимнюю пору...
+    </code>
 </html>
